--- a/droplet-deployment/docker-compose.yml
+++ b/droplet-deployment/docker-compose.yml
@@ -18,6 +18,22 @@ services:
       # SendGrid Email Configuration
       MAIL_URL: smtps://apikey:${SENDGRID_API_KEY}@smtp.sendgrid.net:465
       OVERWRITE_SETTING_From_Email: support@everjust.com
+      # EVERJUST: Disable enterprise restrictions and promotional banners
+      OVERWRITE_SETTING_Show_Setup_Wizard: "completed"
+      OVERWRITE_SETTING_Site_Name: "EVERJUST Chat"
+      OVERWRITE_SETTING_Site_Url: "https://everjust.chat"
+      OVERWRITE_SETTING_Register_Server: "false"
+      OVERWRITE_SETTING_Cloud_Service_Agree_PrivacyTerms: "true"
+      OVERWRITE_SETTING_Statistics_reporting: "false"
+      OVERWRITE_SETTING_Send_Statistics_ToRocketChat: "false"
+      OVERWRITE_SETTING_Apps_Framework_enabled: "true"
+      OVERWRITE_SETTING_Apps_Framework_Development_Mode: "true"
+      # Enhanced file upload settings
+      OVERWRITE_SETTING_Message_MaxAllowedSize: "5000"
+      OVERWRITE_SETTING_FileUpload_MaxFileSize: "104857600"
+      # Custom branding - remove Rocket.Chat footer
+      OVERWRITE_SETTING_Layout_Sidenav_Footer: ""
+      OVERWRITE_SETTING_Assets_SvgFavicon_Enable: "true"
     depends_on:
       mongo:
         condition: service_healthy
