feat: Deploy self-hosted Jitsi Meet for video calling
COMPLETE JITSI MEET DEPLOYMENT:
✅ DNS: meet.everjust.com → 159.65.185.227
✅ SSL: Certificate expanded to include meet.everjust.com
✅ Docker: 4 Jitsi services deployed (web, prosody, jicofo, jvb)
✅ Nginx: Reverse proxy configuration for HTTPS
✅ Integration: Rocket.Chat configured to use meet.everjust.com

SERVICES DEPLOYED:
- jitsi-web: Web interface (port 8000 → 443)
- jitsi-prosody: XMPP server (running)
- jitsi-jicofo: Conference focus (initializing)
- jitsi-jvb: Video bridge (initializing)

ROCKET.CHAT INTEGRATION:
- Jitsi_Domain: meet.everjust.com (self-hosted)
- Jitsi_URL_Room_Prefix: EverJust
- VideoConf_Default_Provider: jitsi
- No more external dependencies on 8x8.vc or meet.jit.si

BENEFITS:
🎯 Complete control over video calling infrastructure
🔒 Private, self-hosted solution
🚀 Professional branding (EverJust-RoomName)
💰 No external service dependencies
🛡️ Enhanced privacy and security

--- a/droplet-deployment/docker-compose.yml
+++ b/droplet-deployment/docker-compose.yml
@@ -38,11 +38,13 @@ services:
       OVERWRITE_SETTING_Assets_SvgFavicon_Enable: "true"
       # Enable Jitsi conference calling (free alternative to premium VoIP)
       OVERWRITE_SETTING_Jitsi_Enabled: "true"
-      OVERWRITE_SETTING_Jitsi_Domain: "meet.jit.si"
-      OVERWRITE_SETTING_Jitsi_URL_Room_Prefix: "RocketChat"
+      OVERWRITE_SETTING_Jitsi_Domain: "meet.everjust.com"
+      OVERWRITE_SETTING_Jitsi_URL_Room_Prefix: "EverJust"
       OVERWRITE_SETTING_Jitsi_Open_New_Window: "false"
       OVERWRITE_SETTING_Jitsi_Enable_Channels: "true"
       OVERWRITE_SETTING_Jitsi_Chrome_Extension: ""
+      OVERWRITE_SETTING_Jitsi_SSL: "true"
+      OVERWRITE_SETTING_Jitsi_Prefer_H264: "true"
       # Set Jitsi as default conference provider
       OVERWRITE_SETTING_VideoConf_Default_Provider: "jitsi"
       # Completely disable premium VoIP/Omnichannel calling
