fix: Complete Jitsi Meet authentication setup
- Add missing JICOFO_AUTH_PASSWORD to jicofo service
- Add missing JVB_AUTH_PASSWORD to jvb service
- All Jitsi services now running without authentication errors
- Jicofo successfully connected to JVB bridge
- JVB serving on port 8080 with REST API enabled

RESULT: Self-hosted Jitsi Meet fully operational
- No more 'Authentication required' prompts
- All backend services properly authenticated
- Ready for video conferencing without external dependencies

--- a/droplet-deployment/jitsi-docker-compose.yml
+++ b/droplet-deployment/jitsi-docker-compose.yml
@@ -120,6 +120,7 @@ services:
       - XMPP_INTERNAL_MUC_DOMAIN=internal-muc.meet.jitsi
       - XMPP_SERVER=jitsi-prosody
       - JVB_AUTH_USER=jvb
+      - JVB_AUTH_PASSWORD=EverJust2025!
       - JVB_ENABLE_APIS=rest,colibri
       - JVB_STUN_SERVERS=meet-jit-si-turnrelay.jitsi.net:443
       - JVB_PORT=10000
@@ -150,6 +151,7 @@ services:
       - XMPP_SERVER=jitsi-prosody
       - JICOFO_COMPONENT_SECRET=s3cr3t
       - JICOFO_AUTH_USER=focus
+      - JICOFO_AUTH_PASSWORD=EverJust2025!
       - JVB_BREWERY_MUC=jvbbrewery
       - JIGASI_BREWERY_MUC=jigasibrewery
       - JIGASI_SIP_URI=test@sip2sip.info
