fix: Resolve license validation errors causing 502 Bad Gateway
- Fixed OVERWRITE_SETTING_Enterprise_License from 'true' to empty string
- License validation was failing with '(license ?? "").trim is not a function'
- Combined with EXIT_UNHANDLEDPROMISEREJECTION fix for complete startup recovery
- Removed duplicate license setting that was causing YAML parsing errors

RESULT: Rocket.Chat now returns HTTP 200 OK and loads successfully
TESTED: Both localhost:3000 and https://everjust.chat working

ISSUE: 502 Bad Gateway on everjust.chat
SOLUTION: Proper license configuration + promise rejection handling

--- a/droplet-deployment/docker-compose.yml
+++ b/droplet-deployment/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       OVERWRITE_SETTING_Apps_Framework_enabled: "true"
       OVERWRITE_SETTING_Apps_Framework_Development_Mode: "true"
       # Bypass enterprise license restrictions for layout customization
-      OVERWRITE_SETTING_Enterprise_License: "true"
+      OVERWRITE_SETTING_Enterprise_License: ""
       OVERWRITE_SETTING_Cloud_Workspace_Id: ""
       OVERWRITE_SETTING_Cloud_Workspace_Client_Id: ""
       OVERWRITE_SETTING_Cloud_Workspace_Client_Secret: ""
@@ -64,6 +64,7 @@ services:
       OVERWRITE_SETTING_Omnichannel_VoIP_Enabled: "false"
       # Fix Apps Engine startup issues
       EXIT_UNHANDLEDPROMISEREJECTION: "true"
+      # Fix license validation issues (already set above)
       # Enable conference calling in all contexts
       OVERWRITE_SETTING_VideoConf_Enable_DMs: "true"
       OVERWRITE_SETTING_VideoConf_Enable_Channels: "true"
