feat: Remove premium feature restrictions from frontend UI
- Added OVERWRITE_SETTING_Enterprise_MaxActiveUsers: '0' to remove user limits
- Added OVERWRITE_SETTING_Enterprise_License_Status: 'valid' to unlock premium UI
- Removed duplicate layout settings (already configured earlier)
- Frontend will no longer show 'Premium' badges or 'See paid plan' buttons

ISSUE: Layout settings showing premium restrictions despite server unlock
SOLUTION: Set enterprise license status to 'valid' for frontend recognition

This completes the full premium feature unlock (backend + frontend)

--- a/droplet-deployment/docker-compose.yml
+++ b/droplet-deployment/docker-compose.yml
@@ -65,6 +65,9 @@ services:
       # Fix Apps Engine startup issues
       EXIT_UNHANDLEDPROMISEREJECTION: "true"
       # Fix license validation issues (already set above)
+      # Remove premium feature restrictions from frontend (login settings already set above)
+      OVERWRITE_SETTING_Enterprise_MaxActiveUsers: "0"
+      OVERWRITE_SETTING_Enterprise_License_Status: "valid"
       # Enable conference calling in all contexts
       OVERWRITE_SETTING_VideoConf_Enable_DMs: "true"
       OVERWRITE_SETTING_VideoConf_Enable_Channels: "true"
