fix: Enable Jitsi Meet anonymous access by disabling authentication
- Changed AUTH_TYPE from 'internal' to 'anonymous' in prosody service
- Set ENABLE_AUTH=0 in jitsi-web, jitsi-jicofo, and jitsi-prosody services
- Set ENABLE_GUESTS=1 in jitsi-web service for guest access
- Created deployment scripts for anonymous access configuration
- Resolved port conflicts and network issues during deployment
- Successfully deployed to production server

FIXES: Authentication prompt blocking Jitsi Meet access
RESULT: Users can now join video calls directly without login credentials

All Jitsi services now running with anonymous access:
- jitsi-web: 0.0.0.0:8000->80/tcp, 0.0.0.0:8443->443/tcp
- jitsi-jvb: 0.0.0.0:10000->10000/udp, 0.0.0.0:4443->4443/tcp
- jitsi-prosody: 5222/tcp, 5280/tcp, 5347/tcp
- jitsi-jicofo: Running and connected

Test URLs:
- Direct Jitsi: https://meet.everjust.com
- Rocket.Chat: https://everjust.chat

--- a/droplet-deployment/jitsi-docker-compose.yml
+++ b/droplet-deployment/jitsi-docker-compose.yml
@@ -42,11 +42,11 @@ services:
       - DROPBOX_REDIRECT_URL
       - DYNAMIC_BRANDING_URL
       - ENABLE_AUDIO_PROCESSING
-      - ENABLE_AUTH
+      - ENABLE_AUTH=0
       - ENABLE_CALENDAR
       - ENABLE_FILE_RECORDING_SERVICE
       - ENABLE_FILE_RECORDING_SERVICE_SHARING
-      - ENABLE_GUESTS
+      - ENABLE_GUESTS=1
       - ENABLE_IPV6
       - ENABLE_LIPSYNC
       - ENABLE_NO_AUDIO_DETECTION
@@ -143,7 +143,7 @@ services:
     volumes:
       - ./jitsi-config/jicofo:/config:Z
     environment:
-      - ENABLE_AUTH=1
+      - ENABLE_AUTH=0
       - XMPP_DOMAIN=meet.jitsi
       - XMPP_AUTH_DOMAIN=auth.meet.jitsi
       - XMPP_INTERNAL_MUC_DOMAIN=internal-muc.meet.jitsi
@@ -173,8 +173,8 @@ services:
       - ./jitsi-config/prosody/config:/config:Z
       - ./jitsi-config/prosody/prosody-plugins-custom:/prosody-plugins-custom:Z
     environment:
-      - AUTH_TYPE=internal
-      - ENABLE_AUTH=1
+      - AUTH_TYPE=anonymous
+      - ENABLE_AUTH=0
       - ENABLE_GUESTS=1
       - GLOBAL_MODULES
       - GLOBAL_CONFIG
