feat: Remove Jitsi branding and apply EVERJUST custom branding
- Disabled Jitsi watermarks and logos (SHOW_JITSI_WATERMARK=false)
- Hidden brand watermarks for guests (SHOW_WATERMARK_FOR_GUESTS=false)
- Removed default Jitsi logo URLs (DEFAULT_LOGO_URL="")
- Applied EVERJUST branding:
  * APP_NAME="EVERJUST Video Call"
  * NATIVE_APP_NAME="EVERJUST"
  * PROVIDER_NAME="EVERJUST"
- Hidden invite header (HIDE_INVITE_MORE_HEADER=true)
- Created deployment script for branding changes
- Successfully deployed to production server

RESULT: Jitsi interface now shows EVERJUST branding instead of Jitsi logos
TEST: Visit https://meet.everjust.com to verify logo removal

All Jitsi services restarted with new branding configuration:
- Configuration regenerated from scratch to apply changes
- Anonymous access maintained while removing branding
- Custom EVERJUST branding now appears in video calls

--- a/droplet-deployment/jitsi-docker-compose.yml
+++ b/droplet-deployment/jitsi-docker-compose.yml
@@ -55,6 +55,19 @@ services:
       - ENABLE_WELCOME_PAGE
       - ENABLE_CLOSE_PAGE
       - ENABLE_RECORDING
+      # Hide Jitsi branding and logos
+      - SHOW_JITSI_WATERMARK=false
+      - SHOW_WATERMARK_FOR_GUESTS=false
+      - SHOW_BRAND_WATERMARK=false
+      - BRAND_WATERMARK_LINK=""
+      - JITSI_WATERMARK_LINK=""
+      - DEFAULT_LOGO_URL=""
+      - DEFAULT_WELCOME_PAGE_LOGO_URL=""
+      # Custom branding for EVERJUST
+      - APP_NAME="EVERJUST Video Call"
+      - NATIVE_APP_NAME="EVERJUST"
+      - PROVIDER_NAME="EVERJUST"
+      - HIDE_INVITE_MORE_HEADER=true
       - ENABLE_REMB
       - ENABLE_REQUIRE_DISPLAY_NAME
       - ENABLE_SIMULCAST
