🎨 Complete Jitsi Meeting Invite Preview & Branding Overhaul
✅ **Invite Preview Customization:**
- Updated meeting invite link previews to show 'EVERJUST Video Call'
- Added custom Open Graph meta tags for social media sharing
- Replaced 'Jitsi Meet' branding with professional EVERJUST branding
- Created custom title.html with EVERJUST meta tags

🎨 **Visual Theme Update:**
- Applied black/white color theme (removed teal/purple)
- Set pure black background (#000000) with white text
- Updated interface styling for better contrast
- Created EVERJUST logo variants (color and black/white)

❌ **Jitsi Branding Removal:**
- Completely removed Jitsi logo from meeting interface
- Set SHOW_JITSI_WATERMARK: false in interface config
- Hidden all Jitsi watermarks and promotional content
- Updated provider name from 'Jitsi' to 'EVERJUST'

🛠️ **Deployment Scripts:**
- deploy-jitsi-invite-branding.sh - Complete invite preview setup
- update-jitsi-theme-and-logo.sh - Theme and logo deployment
- simple-fix-jitsi-meta.sh - Meta tags only update
- fix-jitsi-invite-preview.sh - Initial preview fix

📋 **Configuration Updates:**
- Updated jitsi-docker-compose.yml with EVERJUST environment vars
- Modified custom-interface-config.js for black/white theme
- Added proper Open Graph configuration for invite previews
- Set custom app name and provider branding

🧪 **Result:**
Meeting invite links now display professional EVERJUST branding
instead of default Jitsi Meet appearance when shared on social
platforms, messaging apps, and email clients.

--- a/droplet-deployment/jitsi-docker-compose.yml
+++ b/droplet-deployment/jitsi-docker-compose.yml
@@ -67,6 +67,14 @@ services:
       - APP_NAME="EVERJUST Video Call"
       - NATIVE_APP_NAME="EVERJUST"
       - PROVIDER_NAME="EVERJUST"
+      # Custom Open Graph meta tags for invite previews
+      - OG_TITLE="EVERJUST Video Call"
+      - OG_DESCRIPTION="Join secure, high-quality video meetings with EVERJUST. Connect instantly with crystal-clear audio and video."
+      - OG_IMAGE="https://meet.everjust.com/images/everjust-meeting-preview.png"
+      - OG_SITE_NAME="EVERJUST"
+      # Custom logo URLs
+      - DEFAULT_LOGO_URL="images/everjust-logo.png"
+      - DEFAULT_WELCOME_PAGE_LOGO_URL="images/everjust-logo.png"
       - HIDE_INVITE_MORE_HEADER=true
       - ENABLE_REMB
       - ENABLE_REQUIRE_DISPLAY_NAME
