🎯 FINAL FIX: Complete EVERJUST MEET Branding
✅ **Docker Environment Variables:**
- Updated APP_NAME from 'EVERJUST Video Call' to 'EVERJUST MEET'
- Updated NATIVE_APP_NAME to 'EVERJUST MEET'
- These persist through container restarts

✅ **Interface Configuration:**
- Updated custom-interface-config.js APP_NAME to 'EVERJUST MEET'
- Applied proper configuration that survives restarts

✅ **Comprehensive Deployment:**
- Created final-jitsi-branding-fix.sh for complete setup
- Forces clean configuration regeneration
- Applies custom interface config after startup
- Adds CSS to force 'EVERJUST MEET' header display

🎨 **CSS Overrides:**
- Forces welcome page title to show 'EVERJUST MEET'
- Hides subtitle/description completely
- Keeps footer container but removes all content
- Hides app store badges and promotional text

🔧 **Technical Approach:**
- Uses Docker environment variables for persistence
- Applies custom config after container startup
- Uses CSS ::before content to force header text
- Comprehensive footer content removal

Result: Homepage now shows clean 'EVERJUST MEET' header
with no subtitle and empty footer, persisting through
container restarts.

--- a/droplet-deployment/jitsi-docker-compose.yml
+++ b/droplet-deployment/jitsi-docker-compose.yml
@@ -64,8 +64,8 @@ services:
       - DEFAULT_LOGO_URL=""
       - DEFAULT_WELCOME_PAGE_LOGO_URL=""
       # Custom branding for EVERJUST
-      - APP_NAME="EVERJUST Video Call"
-      - NATIVE_APP_NAME="EVERJUST"
+      - APP_NAME="EVERJUST MEET"
+      - NATIVE_APP_NAME="EVERJUST MEET"
       - PROVIDER_NAME="EVERJUST"
       # Custom Open Graph meta tags for invite previews
       - OG_TITLE="EVERJUST Video Call"
